--- a/src/main/res/layout/wiget_banner.xml
+++ b/src/main/res/layout/wiget_banner.xml
@@ -4,7 +4,7 @@
     android:layout_height="250dp"
     android:background="@android:color/white">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp_banner_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
